src/test/deca/context/invalid/parametre_type_void.deca
// Description :
// impossible de faire paramètre de type void 

// Resultats :
// Echec

class Arbitre {
    void annoncer(void msg) { }
}

{ }